force-app/main/default/objects/Form_LCF_Setup_1__c/Form_LCF_Setup_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Full Award Set-Up Form - 1.0</description>
    <label>Form LCF Full Award Setup 1.0</label>
    <nameField>
        <displayFormat>STP-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Full Award Setup 1.0</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>