force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_accounts_audited__c.field-meta.xml
<CustomField>
    <fullName>ap_accounts_audited__c</fullName>
    <inlineHelpText>Have your accounts been independently audited?</inlineHelpText>
    <label>AP - Accounts Audited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>