force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_accounts_files__c.field-meta.xml
<CustomField>
    <fullName>ap_accounts_files__c</fullName>
    <description>Page Title:Accounts Files</description>
    <inlineHelpText>Latest Accounts: File Upload</inlineHelpText>
    <label>AP - Accounts Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>