force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_auditor_name__c.field-meta.xml
<CustomField>
    <fullName>ap_auditor_name__c</fullName>
    <description>Page Title:Auditor Address</description>
    <inlineHelpText>Name</inlineHelpText>
    <label>AP - Auditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>