force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_lead_applicant_changed__c.field-meta.xml
<CustomField>
    <fullName>ap_lead_applicant_changed__c</fullName>
    <inlineHelpText>Has the organisation of the lead applicant changed?</inlineHelpText>
    <label>AP - Lead Applicant Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>