force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_lead_applicant_organisation__c.field-meta.xml
<CustomField>
    <fullName>ap_lead_applicant_organisation__c</fullName>
    <description>Legal name of organisation</description>
    <inlineHelpText>Which organisation is the lead applicant for your project now?</inlineHelpText>
    <label>AP - Lead Applicant Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>