force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_lead_applicant_the_same__c.field-meta.xml
<CustomField>
    <fullName>ap_lead_applicant_the_same__c</fullName>
    <inlineHelpText>Is this the same as at the in-principle stage?</inlineHelpText>
    <label>AP - Lead Applicant the same</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>