force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_legal_contact_date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>ap_legal_contact_date_of_birth__c</fullName>
    <description>For example, 31 3 1980</description>
    <inlineHelpText>Date of birth</inlineHelpText>
    <label>AP - Legal Contact Date of Birth</label>
    <type>Date</type>
</CustomField>