force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_legal_contact_home_address__c.field-meta.xml
<CustomField>
    <fullName>ap_legal_contact_home_address__c</fullName>
    <inlineHelpText>Address</inlineHelpText>
    <label>AP - Legal Contact Home Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>