force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_legal_contact_mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>ap_legal_contact_mobile_phone__c</fullName>
    <defaultValue>&#39;N/A&#39;</defaultValue>
    <inlineHelpText>Mobile Phone (optional)</inlineHelpText>
    <label>AP - Legal Contact Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>