force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_legal_contact_moved__c.field-meta.xml
<CustomField>
    <fullName>ap_legal_contact_moved__c</fullName>
    <inlineHelpText>Has the legally responsible contact moved in the previous three years?</inlineHelpText>
    <label>AP - Legal Contact Moved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>