force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_legal_contact_position__c.field-meta.xml
<CustomField>
    <fullName>ap_legal_contact_position__c</fullName>
    <inlineHelpText>Position or job title</inlineHelpText>
    <label>AP - Legal Contact Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>