force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_legal_contact_previous_address__c.field-meta.xml
<CustomField>
    <fullName>ap_legal_contact_previous_address__c</fullName>
    <inlineHelpText>Previous address</inlineHelpText>
    <label>AP - Legal Contact Previous Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>