force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_legal_contact_previous_postcode__c.field-meta.xml
<CustomField>
    <fullName>ap_legal_contact_previous_postcode__c</fullName>
    <inlineHelpText>Previous postcode</inlineHelpText>
    <label>AP - Legal Contact Previous Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>