force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_legal_contact_work_email__c.field-meta.xml
<CustomField>
    <fullName>ap_legal_contact_work_email__c</fullName>
    <inlineHelpText>Work email address</inlineHelpText>
    <label>AP - Legal Contact Work Email</label>
    <type>Email</type>
</CustomField>