force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_operating_period__c.field-meta.xml
<CustomField>
    <fullName>ap_operating_period__c</fullName>
    <inlineHelpText>How long has your organisation been operating for?</inlineHelpText>
    <label>AP - Operating Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More than 15 months</fullName>
            </value>
            <value>
                <fullName>Less than 15 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>