force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_organisation_address__c.field-meta.xml
<CustomField>
    <fullName>ap_organisation_address__c</fullName>
    <inlineHelpText>Address</inlineHelpText>
    <label>AP - Organisation Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>