force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_organisation_postcode__c.field-meta.xml
<CustomField>
    <fullName>ap_organisation_postcode__c</fullName>
    <inlineHelpText>Postcode</inlineHelpText>
    <label>AP - Organisation Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>