force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_organisation_reference__c.field-meta.xml
<CustomField>
    <fullName>ap_organisation_reference__c</fullName>
    <inlineHelpText>Enter the number</inlineHelpText>
    <label>AP - Organisation Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>