force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_organisation_sector__c.field-meta.xml
<CustomField>
    <fullName>ap_organisation_sector__c</fullName>
    <inlineHelpText>What is the organisation sector of the lead applicant?</inlineHelpText>
    <label>AP - Organisation Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector_of_Organisation</valueSetName>
    </valueSet>
</CustomField>