force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_organisation_type__c.field-meta.xml
<CustomField>
    <fullName>ap_organisation_type__c</fullName>
    <inlineHelpText>What type of organisation is the lead applicant?</inlineHelpText>
    <label>AP - Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Type</valueSetName>
    </valueSet>
</CustomField>