force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_original_project_name__c.field-meta.xml
<CustomField>
    <fullName>ap_original_project_name__c</fullName>
    <inlineHelpText>What is the original name of your project?</inlineHelpText>
    <label>AP - Original Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>