force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_previous_lead_applicant__c.field-meta.xml
<CustomField>
    <fullName>ap_previous_lead_applicant__c</fullName>
    <inlineHelpText>Which organisation was previously the lead applicant?</inlineHelpText>
    <label>AP - Previous Lead Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>