force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_primary_contact_changed__c.field-meta.xml
<CustomField>
    <fullName>ap_primary_contact_changed__c</fullName>
    <inlineHelpText>Has the primary point of contact changed?</inlineHelpText>
    <label>AP - Primary Contact Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>