force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_primary_contact_daytime_phone__c.field-meta.xml
<CustomField>
    <fullName>ap_primary_contact_daytime_phone__c</fullName>
    <inlineHelpText>Daytime number</inlineHelpText>
    <label>AP - Primary Contact Daytime Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>