force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_primary_contact_last_name__c.field-meta.xml
<CustomField>
    <fullName>ap_primary_contact_last_name__c</fullName>
    <inlineHelpText>Last name</inlineHelpText>
    <label>AP - Primary Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>