force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_primary_contact_mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>ap_primary_contact_mobile_phone__c</fullName>
    <defaultValue>'N/A'</defaultValue>
    <inlineHelpText>Mobile Phone</inlineHelpText>
    <label>AP - Primary Contact Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>