force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_primary_contact_moved__c.field-meta.xml
<CustomField>
    <fullName>ap_primary_contact_moved__c</fullName>
    <inlineHelpText>Has the primary contact moved in the previous three years?</inlineHelpText>
    <label>AP - Primary Contact Moved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>