force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_primary_contact_previous_postcode__c.field-meta.xml
<CustomField>
    <fullName>ap_primary_contact_previous_postcode__c</fullName>
    <inlineHelpText>Previous postcode</inlineHelpText>
    <label>AP - Primary Contact Previous Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>