force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_project_name__c.field-meta.xml
<CustomField>
    <fullName>ap_project_name__c</fullName>
    <inlineHelpText>What is the new name of your project?</inlineHelpText>
    <label>AP - Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>