force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_project_name_changed__c.field-meta.xml
<CustomField>
    <fullName>ap_project_name_changed__c</fullName>
    <inlineHelpText>Has the name of you project changed?</inlineHelpText>
    <label>AP - Project Name Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>