force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_reference_type__c.field-meta.xml
<CustomField>
    <fullName>ap_reference_type__c</fullName>
    <description>Page Title:Org Reference</description>
    <inlineHelpText>Select the type of number</inlineHelpText>
    <label>AP - Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charity Commission for England and Wales</fullName>
            </value>
            <value>
                <fullName>Companies House</fullName>
            </value>
            <value>
                <fullName>Financial Conduct Authority</fullName>
            </value>
            <value>
                <fullName>Health Authority Number</fullName>
            </value>
            <value>
                <fullName>School Reference Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>