force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_same_bank_account__c.field-meta.xml
<CustomField>
    <fullName>ap_same_bank_account__c</fullName>
    <inlineHelpText>Will LCF payments be made to the same bank account as previously used for development grant payments?</inlineHelpText>
    <label>AP - Same Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>