force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_savings_reserves__c.field-meta.xml
<CustomField>
    <fullName>ap_savings_reserves__c</fullName>
    <inlineHelpText>Total savings or reserves at the year end</inlineHelpText>
    <label>AP - Savings of Reserves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>