force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_surplus_deficit__c.field-meta.xml
<CustomField>
    <fullName>ap_surplus_deficit__c</fullName>
    <inlineHelpText>Surplus or deficit at the year end</inlineHelpText>
    <label>AP - Surplus or Deficit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>