force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_total_expenditure__c.field-meta.xml
<CustomField>
    <fullName>ap_total_expenditure__c</fullName>
    <inlineHelpText>Total expenditure for the year</inlineHelpText>
    <label>AP - Total Expenditure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>