force-app/main/default/objects/Form_LCF_Setup_1__c/fields/ap_total_income__c.field-meta.xml
<CustomField>
    <fullName>ap_total_income__c</fullName>
    <description>Page Title:Org Accounts</description>
    <inlineHelpText>Total income for the year</inlineHelpText>
    <label>AP - Total Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>