force-app/main/default/objects/Form_LCF_Setup_1__c/fields/Commissioner_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Commissioner_Organisation__c</fullName>
    <formula>pr_primary_stakeholder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioner Organisation</label>
    <type>Text</type>
</CustomField>