force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_all_commissioner_approval_date__c.field-meta.xml
<CustomField>
    <fullName>cs_all_commissioner_approval_date__c</fullName>
    <inlineHelpText>When do you expect final approval and sign off?</inlineHelpText>
    <label>CS - All Commissioner Approval Date</label>
    <type>Date</type>
</CustomField>