force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_all_investment_raised__c.field-meta.xml
<CustomField>
    <fullName>cs_all_investment_raised__c</fullName>
    <inlineHelpText>Have you raised all of the investment yet?</inlineHelpText>
    <label>CS - All Investment Raised?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>