force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_all_provider_approval_date__c.field-meta.xml
<CustomField>
    <fullName>cs_all_provider_approval_date__c</fullName>
    <description>For example, 31 3 2018</description>
    <inlineHelpText>When do you expect final approval and sign off from all the provider(s)?</inlineHelpText>
    <label>CS - All Provider Approval Approval Date</label>
    <type>Date</type>
</CustomField>