force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_balance_of_investment__c.field-meta.xml
<CustomField>
    <fullName>cs_balance_of_investment__c</fullName>
    <inlineHelpText>Who will you approach and when do you expect to secure the balance?</inlineHelpText>
    <label>CS - Balance of Investment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>