force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_balance_of_investment_contingency__c.field-meta.xml
<CustomField>
    <fullName>cs_balance_of_investment_contingency__c</fullName>
    <inlineHelpText>What will you do if you don’t raise the full balance?</inlineHelpText>
    <label>CS - Balance of Investment Contingency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>