force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_commissioner_commitment__c.field-meta.xml
<CustomField>
    <fullName>cs_commissioner_commitment__c</fullName>
    <inlineHelpText>Has your lead commissioner make a firm budgetary commitment to this SIB?</inlineHelpText>
    <label>CS - Commissioner Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>