force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_commissioner_commitment_date__c.field-meta.xml
<CustomField>
    <fullName>cs_commissioner_commitment_date__c</fullName>
    <inlineHelpText>When will the commissioner make a firm budgetary commitment?</inlineHelpText>
    <label>CS - Commissioner Commitment Date</label>
    <type>Date</type>
</CustomField>