force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_commissioner_funding_source__c.field-meta.xml
<CustomField>
    <fullName>cs_commissioner_funding_source__c</fullName>
    <inlineHelpText>Who will source the funds from fee for service or other blended funding from commissioners?</inlineHelpText>
    <label>CS - Commissioner Funding Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>