force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_commissioner_funding_source_known__c.field-meta.xml
<CustomField>
    <fullName>cs_commissioner_funding_source_known__c</fullName>
    <inlineHelpText>Do you know who will source the funds?</inlineHelpText>
    <label>CS - Commissioner Funding Source Known</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>