force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_commissioner_signoff_date__c.field-meta.xml
<CustomField>
    <fullName>cs_commissioner_signoff_date__c</fullName>
    <description>You should have sign off from lead commissioner finance director before you submit this form and be able to put your business case to your lead commissioner within two months of submitting this form to LCF.</description>
    <inlineHelpText>When do you expect to get sign off from commissioners?</inlineHelpText>
    <label>CS - Commissioner Signoff Date</label>
    <type>Date</type>
</CustomField>