force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_due_diligence_date__c.field-meta.xml
<CustomField>
    <fullName>cs_due_diligence_date__c</fullName>
    <description>This should have been completed before you submit this form to LCF.</description>
    <inlineHelpText>When do you (or your chosen provider) expect to complete due diligence with investors?</inlineHelpText>
    <label>CS - Due Diligence Date</label>
    <type>Date</type>
</CustomField>