force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_evaluation_comparators__c.field-meta.xml
<CustomField>
    <fullName>cs_evaluation_comparators__c</fullName>
    <description>Outline which other programmes or service user cohorts you plan to use as a comparison to your SIB project.</description>
    <inlineHelpText>Evaluation Comparators: What comparators will you evaluate the delivery of your SIB against?</inlineHelpText>
    <label>CS - Evaluation Comparators</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>