force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_evaluation_indicators__c.field-meta.xml
<CustomField>
    <fullName>cs_evaluation_indicators__c</fullName>
    <inlineHelpText>Evaluation Indicators: Tell us about indicators you’ll use to evaluate your SIB</inlineHelpText>
    <label>CS - Evaluation Indicators</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>