force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_evaluation_resourcing__c.field-meta.xml
<CustomField>
    <fullName>cs_evaluation_resourcing__c</fullName>
    <description>Tell us about the resources that will be committed to fulfilling this evaluation work. How will you ensure your evaluation is seen as being independent from your project? Tell us about the dissemination of evaluation findings and any other project learning. This may include internal analytical capacity, externally procured evaluation work or both.</description>
    <inlineHelpText>Resourcing your evaluation and disseminating learning</inlineHelpText>
    <label>CS - Evaluation Resourcing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>