force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_final_claim_date__c.field-meta.xml
<CustomField>
    <fullName>cs_final_claim_date__c</fullName>
    <inlineHelpText>What will be the SIB’s final claim date for LCF?</inlineHelpText>
    <label>CS - Final Claim Date</label>
    <type>Date</type>
</CustomField>