force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_fixed_rate_fund_source__c.field-meta.xml
<CustomField>
    <fullName>cs_fixed_rate_fund_source__c</fullName>
    <inlineHelpText>Who will source the fixed rate loan(s)?</inlineHelpText>
    <label>CS - Fixed Rate Fund Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>