force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_fixed_rate_loan_amount__c.field-meta.xml
<CustomField>
    <fullName>cs_fixed_rate_loan_amount__c</fullName>
    <inlineHelpText>Amount needed from fixed rate loans</inlineHelpText>
    <label>CS - Fixed Rate Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>