force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_fixed_rate_loan_secured__c.field-meta.xml
<CustomField>
    <fullName>cs_fixed_rate_loan_secured__c</fullName>
    <inlineHelpText>Has this been secured?</inlineHelpText>
    <label>CS - Fixed Rate Loan Secured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>