force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_fixed_rate_source_known__c.field-meta.xml
<CustomField>
    <fullName>cs_fixed_rate_source_known__c</fullName>
    <inlineHelpText>Do you know who will source the loan(s)?</inlineHelpText>
    <label>CS - Fixed Rate Source Known</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>