force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_funds_from_commissioners_amount__c.field-meta.xml
<CustomField>
    <fullName>cs_funds_from_commissioners_amount__c</fullName>
    <inlineHelpText>Amount needed from funds from fee for service or other blended funding from commissioners</inlineHelpText>
    <label>CS - Funds from Commissioners Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>