force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_interest_to_investors__c.field-meta.xml
<CustomField>
    <fullName>cs_interest_to_investors__c</fullName>
    <inlineHelpText>What is the maximum you expect to have to pay in interest to investors?</inlineHelpText>
    <label>CS - Interest to investors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>