force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_investment_needed__c.field-meta.xml
<CustomField>
    <fullName>cs_investment_needed__c</fullName>
    <description>Balance of investment needed</description>
    <formula>cs_maximum_investment_need__c - NULLVALUE(cs_investment_raised_so_far__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance of investment needed</inlineHelpText>
    <label>CS - Investment Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>