force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_investment_raised_so_far__c.field-meta.xml
<CustomField>
    <fullName>cs_investment_raised_so_far__c</fullName>
    <inlineHelpText>How much investment has been raised so far?</inlineHelpText>
    <label>CS - Investment Raised So Far</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>