force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_investor_return_rate__c.field-meta.xml
<CustomField>
    <fullName>cs_investor_return_rate__c</fullName>
    <inlineHelpText>What is the maximum annual rate of return you expect the SIB to pay to investors?</inlineHelpText>
    <label>CS - Investor Return Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>