force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_investors_confirmed__c.field-meta.xml
<CustomField>
    <fullName>cs_investors_confirmed__c</fullName>
    <inlineHelpText>Has the project confirmed an investor(s) yet?</inlineHelpText>
    <label>CS - Investors Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>